--- a/src/main/java/view/LoginPage.fxml
+++ b/src/main/java/view/LoginPage.fxml
@@ -9,7 +9,7 @@
     <children>
         <ImageView fitHeight="344.0" fitWidth="675.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../resources/background.png" />
+                <Image url="@../../resources/resources/background.png" />
             </image></ImageView>
         <Button layoutX="258.0" layoutY="214.0" mnemonicParsing="false" onMouseClicked="#login" prefHeight="38.0" prefWidth="159.0" text="Login">
             <effect>
