--- a/src/main/java/view/RegisterPage.fxml
+++ b/src/main/java/view/RegisterPage.fxml
@@ -9,7 +9,7 @@
     <children>
         <ImageView fitHeight="361.0" fitWidth="675.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../resources/background.png" />
+                <Image url="@../../resources/resources/background.png" />
             </image></ImageView>
         <Button layoutX="252.0" layoutY="214.0" mnemonicParsing="false" onMouseClicked="#register" prefHeight="38.0" prefWidth="159.0" text="register">
             <effect>
