--- a/src/main/resources/fxml/SellerPage.fxml
+++ b/src/main/resources/fxml/SellerPage.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="321.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ManagerPage">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="321.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SellerPage">
     <children>
         <ImageView fitHeight="361.0" fitWidth="675.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -27,35 +26,31 @@
                 </VBox>
                 <VBox spacing="9.0">
                     <children>
-                        <Label fx:id="nameLabel" prefHeight="17.0" prefWidth="82.0" text="jhgjh" />
+                        <Label fx:id="nameLabel" prefHeight="17.0" prefWidth="82.0" text="Label" />
                         <Label fx:id="familyNameLabel" text="Label" />
                         <Label fx:id="passwordLabel" text="Label" />
                         <Label fx:id="emailLabel" text="Label" />
                         <Label fx:id="usernameLabel" text="Label" />
                         <Label fx:id="phoneNumberLabel" text="Label" />
-                        <Label text="manager" />
-                        <Label fx:id="creditLabel" prefHeight="17.0" prefWidth="33.0" text="e" />
+                        <Label text="seller" />
+                        <Label fx:id="creditLabel" prefHeight="17.0" prefWidth="33.0" text="0" />
                     </children>
                 </VBox>
             </children>
         </HBox>
         <Label accessibleRole="TEXT_FIELD" alignment="CENTER" contentDisplay="CENTER" layoutX="258.0" layoutY="6.0" prefHeight="25.0" prefWidth="159.0" text="My Account" />
-        <VBox layoutX="379.0" layoutY="40.0" spacing="5.0">
+        <VBox layoutX="405.0" layoutY="58.0" spacing="5.0">
             <children>
-                <Button mnemonicParsing="false" onMouseClicked="#showManagerRegisterPage" prefHeight="25.0" prefWidth="123.0" text="create manager" />
-                <Button mnemonicParsing="false" onMouseClicked="#showManageUsersPage" prefHeight="25.0" prefWidth="123.0" text="manage users">
-                    <effect>
-                        <ColorAdjust />
-                    </effect>
-                </Button>
-                <Button mnemonicParsing="false" onMouseClicked="#showManageDiscountPage" prefHeight="25.0" prefWidth="122.0" text="manage discount" />
-            <Button mnemonicParsing="false" onMouseClicked="#showManageProductPage" prefHeight="25.0" prefWidth="122.0" text="manage product" />
-            <Button mnemonicParsing="false" onMouseClicked="#showManageRequestPage" prefHeight="25.0" prefWidth="122.0" text="manage request" />
-            <Button mnemonicParsing="false" onMouseClicked="#showManageCategoryPage" prefHeight="25.0" prefWidth="121.0" text="manage category" />
-                <Button mnemonicParsing="false" onMouseClicked="#edit" prefHeight="25.0" prefWidth="122.0" text="edit" />
-                <Button mnemonicParsing="false" onMouseClicked="#logout" prefHeight="25.0" prefWidth="121.0" text="logout" />
+                <Button mnemonicParsing="false" onMouseClicked="#sellLog" prefHeight="25.0" prefWidth="109.0" text="sale history" />
+                <Button mnemonicParsing="false" onMouseClicked="#sellerProduct" prefHeight="25.0" prefWidth="108.0" text="manage product" />
+                <Button mnemonicParsing="false" onMouseClicked="#edit" prefHeight="25.0" prefWidth="110.0" text="edit" />
+            <Button mnemonicParsing="false" onMouseClicked="#showOffPage" prefHeight="25.0" prefWidth="108.0" text="off page" />
+            <Button mnemonicParsing="false" onMouseClicked="#showCategory" prefHeight="25.0" prefWidth="108.0" text="show category" />
             </children>
         </VBox>
+        <Button layoutX="52.0" layoutY="282.0" mnemonicParsing="false" onMouseClicked="#logout" text="logout" />
         <Label fx:id="discountLabel" layoutX="522.0" layoutY="58.0" />
+      <Label layoutX="126.0" layoutY="262.0" prefHeight="17.0" prefWidth="58.0" text="company" />
+      <Label fx:id="companyText" layoutX="274.0" layoutY="262.0" text="Label" />
     </children>
 </Pane>
