--- a/src/main/resources/fxml/ManageRequestPage.fxml
+++ b/src/main/resources/fxml/ManageRequestPage.fxml
@@ -11,7 +11,7 @@
                 <Image url="@../resources/background.png" />
             </image></ImageView>
         <HBox layoutX="126.0" layoutY="58.0" />
-        <Label accessibleRole="TEXT_FIELD" alignment="CENTER" contentDisplay="CENTER" layoutX="258.0" layoutY="6.0" prefHeight="25.0" prefWidth="159.0" text="manage discounts" />
+        <Label accessibleRole="TEXT_FIELD" alignment="CENTER" contentDisplay="CENTER" layoutX="258.0" layoutY="6.0" prefHeight="25.0" prefWidth="159.0" text="manage requests" />
         <Button layoutX="100.0" layoutY="282.0" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="25.0" prefWidth="53.0" text="logout" />
         <Button layoutX="47.0" layoutY="282.0" mnemonicParsing="false" onMouseClicked="#back" text="back" />
         <VBox fx:id="userInfoVBox" layoutX="282.0" layoutY="58.0" prefHeight="175.0" prefWidth="100.0" />
