--- a/src/main/resources/fxml/ProductPage.fxml
+++ b/src/main/resources/fxml/ProductPage.fxml
@@ -11,7 +11,7 @@
                 <Image url="@../resources/background.png" />
             </image></ImageView>
         <HBox layoutX="126.0" layoutY="58.0" />
-        <Label accessibleRole="TEXT_FIELD" alignment="CENTER" contentDisplay="CENTER" layoutX="258.0" layoutY="6.0" onMouseClicked="#showProductPage" prefHeight="25.0" prefWidth="159.0" text="products page" />
+        <Label accessibleRole="TEXT_FIELD" alignment="CENTER" contentDisplay="CENTER" layoutX="258.0" layoutY="6.0"  prefHeight="25.0" prefWidth="159.0" text="products page" />
         <Button layoutX="47.0" layoutY="282.0" mnemonicParsing="false" onMouseClicked="#back" text="back" />
         <VBox fx:id="userInfoVBox" layoutX="282.0" layoutY="58.0" prefHeight="175.0" prefWidth="100.0" />
         <Button layoutX="473.0" layoutY="74.0" mnemonicParsing="false" onMouseClicked="#addCart" prefHeight="25.0" prefWidth="119.0" text="add to cart" />
