--- a/src/main/resources/fxml/SellerOffPage.fxml
+++ b/src/main/resources/fxml/SellerOffPage.fxml
@@ -4,27 +4,32 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="321.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SellerOffPage">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="321.0"
+      prefWidth="675.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="controller.SellerOffPage">
     <children>
         <ImageView fitHeight="361.0" fitWidth="675.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../resources/background.png" />
-            </image></ImageView>
-        <HBox layoutX="126.0" layoutY="58.0" />
-        <Label accessibleRole="TEXT_FIELD" alignment="CENTER" contentDisplay="CENTER" layoutX="258.0" layoutY="6.0" prefHeight="25.0" prefWidth="159.0" text="seller off page" />
-        <Button layoutX="100.0" layoutY="282.0" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="25.0" prefWidth="53.0" text="logout" />
-        <Button layoutX="47.0" layoutY="282.0" mnemonicParsing="false" onMouseClicked="#back" text="back" />
-        <VBox fx:id="userInfoVBox" layoutX="282.0" layoutY="58.0" prefHeight="175.0" prefWidth="100.0" />
+                <Image url="@../resources/background.png"/>
+            </image>
+        </ImageView>
+        <HBox layoutX="126.0" layoutY="58.0"/>
+        <Label accessibleRole="TEXT_FIELD" alignment="CENTER" contentDisplay="CENTER" layoutX="258.0" layoutY="6.0"
+               prefHeight="25.0" prefWidth="159.0" text="seller off page"/>
+        <Button layoutX="100.0" layoutY="282.0" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="25.0"
+                prefWidth="53.0" text="logout"/>
+        <Button layoutX="47.0" layoutY="282.0" mnemonicParsing="false" onMouseClicked="#back" text="back"/>
+        <VBox fx:id="userInfoVBox" layoutX="282.0" layoutY="58.0" prefHeight="175.0" prefWidth="100.0"/>
         <ScrollPane fx:id="scrollPane" layoutX="26.0" layoutY="45.0" prefHeight="144.0" prefWidth="200.0">
             <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0"/>
             </content>
         </ScrollPane>
-      <TextField fx:id="startDateText" layoutX="464.0" layoutY="58.0" promptText="start date" />
-      <TextField fx:id="finishDateText" layoutX="464.0" layoutY="92.0" promptText="finish date" />
-      <TextField fx:id="amountText" layoutX="464.0" layoutY="123.0" promptText="amount" />
-      <TextField fx:id="productsText" layoutX="464.0" layoutY="189.0" promptText="products" />
-      <Button layoutX="512.0" layoutY="233.0" mnemonicParsing="false" onMouseClicked="#create" text="create" />
-      <TextField fx:id="percentText" layoutX="464.0" layoutY="152.0" promptText="percent" />
+        <TextField fx:id="startDateText" layoutX="464.0" layoutY="58.0" promptText="start date"/>
+        <TextField fx:id="finishDateText" layoutX="464.0" layoutY="92.0" promptText="finish date"/>
+        <TextField fx:id="amountText" layoutX="464.0" layoutY="123.0" promptText="amount"/>
+        <TextField fx:id="productsText" layoutX="464.0" layoutY="189.0" promptText="products"/>
+        <Button layoutX="512.0" layoutY="233.0" mnemonicParsing="false" onMouseClicked="#create" text="create"/>
+        <TextField fx:id="percentText" layoutX="464.0" layoutY="152.0" promptText="percent"/>
     </children>
 </Pane>
