--- a/src/main/resources/fxml/PoshtibanPage.fxml
+++ b/src/main/resources/fxml/PoshtibanPage.fxml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.PoshtibanPage"
-            prefHeight="400.0" prefWidth="600.0">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="321.0" prefWidth="675.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PoshtibanPage">
+    <children>
+        <ImageView fitHeight="361.0" fitWidth="675.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../resources/background.png" />
+            </image></ImageView>
+        <HBox layoutX="126.0" layoutY="58.0">
+            <children>
+                <VBox>
+                    <children>
+                        <Label prefHeight="25.0" prefWidth="81.0" text="name:" />
+                        <Label prefHeight="25.0" prefWidth="81.0" text="family name:" />
+                        <Label prefHeight="25.0" prefWidth="81.0" text="password:" />
+                        <Label prefHeight="25.0" prefWidth="75.0" text="email:" />
+                        <Label prefHeight="25.0" prefWidth="75.0" text="username:" />
+                        <Label prefHeight="25.0" prefWidth="149.0" text="phone number:" />
+                        <Label prefHeight="25.0" prefWidth="149.0" text="account type: " />
+                        <Label prefHeight="25.0" prefWidth="68.0" text="credit:" />
+                    </children>
+                </VBox>
+                <VBox spacing="9.0">
+                    <children>
 
-</AnchorPane>
+                        <Label fx:id="passwordLabel" text="Label" />
+                        <Label fx:id="usernameLabel" text="Label" />
+
+                        <Label text="poshtiban" />
+
+                    </children>
+                </VBox>
+            </children>
+        </HBox>
+        <Label accessibleRole="TEXT_FIELD" alignment="CENTER" contentDisplay="CENTER" layoutX="258.0" layoutY="6.0" prefHeight="25.0" prefWidth="159.0" text="My Account" />
+
+    </children>
+</Pane>
